# thatisnotmy.name

./: .gitignore  thatisnotmy.name.ipr  thatisnotmy.name.iws
docs/: CNAME  asset-manifest.json  index.html
docs/static/js/: 787.5c9c9cef.chunk.js  787.5c9c9cef.chunk.js.map  main.4b4e6817.js  main.4b4e6817.js.map
lambdas/tts/: .dockerignore  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  manual-deploy-cmds.sh  start.sh  test.http
lambdas/tts/src/: jwt_utils.rs  main.rs  request_handler.rs  tts_api.rs  tts_api_spec.rs
tinm-frontend/: package-lock.json  package.json
tinm-frontend/.husky/: pre-commit
tinm-frontend/docs/: index.html
tinm-frontend/docs/static/js/: main.9bfa7a3b.js  main.9bfa7a3b.js.map
tinm-frontend/public/: 404.html  index.html
tinm-frontend/src/: App.js  CachingApi.js  TODO.md  index.js
tinm-frontend/src/routes/: home.js  tts.js
